<resources>
    //First Activity
    <string name="app_name">AutoCalc</string>
    <string name="name">Auto Purchase</string>
    <string name="info">Enter car purchase information.</string>
    <string name="price">What is the price of your car?</string>
    <string name="downPayment">What is the down payment?</string>
    <string name="two">2 years</string>
    <string name="three">3 years</string>
    <string name="four">4 years</string>
    <string name="loanTerm">Choose your loan term:</string>
    <string name="report">Loan Report</string>
    <string name="dollars">$</string>
    <string name="briefSummary">Brief Summary</string>

    //Second Activity
    <string name="summary">Your loan summary.</string>
    <string name="dataEntry">Return to Data Entry</string>

    //Report
    <string name="monthlyPayment">\n\t\t\t<b>Monthly Payment:</b>\t$</string>
    <string name="report_line1">\n\tCar Sticker Price: $</string>
    <string name="report_line2">\n\tYou will put down: $</string>
    <string name="report_line3">\n\tLoan Term is:</string>
    <string name="report_line4">\n\tTaxed Amount: $</string>
    <string name="report_line5">\n\tYour Cost: $</string>
    <string name="report_line6">\n\tBorrowed Amount: $</string>
    <string name="report_line7">\n\tInterest Amount: $</string>
    //Note
    <string name="note_line1">\n\n\nNOTE:</string>
    <string name="note_line2">\n1. Loan information is made available by Tom\'s Car Dealership</string>
    <string name="note_line3">\n2. A sales tax rate of 7% is required in the state of California</string>
    <string name="note_line4">\n3. Vehicles are financed at an annual interest rate of 9%.</string>
</resources>
